--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-diplomwork-frontend",
+  "homepage": "https://github.com/IlyaZakharov00/react_DiplomWork_Frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
