--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-diplomwork-frontend",
   "homepage": "https://IlyaZakharov00.github.io/",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
