--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-diplomwork-frontend",
-  "homepage": "https://IlyaZakharov00.github.io/",
+  "homepage": "https://IlyaZakharov00.github.io/react_DiplomWork_Frontend",
   "private": false,
   "version": "0.0.0",
   "type": "module",
