--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-diplomwork-frontend",
-  "homepage": "https://IlyaZakharov00.github.io/react_DiplomWork_Frontend",
+  "homepage": "https://github.com/IlyaZakharov00/react_DiplomWork_Frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
